fix: :bug: fix bug text not responsive while dark and light mode

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,10 +32,15 @@ html[data-bs-theme=dark] .bg-navbar-blur {
     transition: box-shadow 0.25s, backdrop-filter 0.25s, background-color 0.25s;
 }
 
+.navbar-brand-title, .navbar-brand-subtitle {
+    color: var(--dark-color);
+    text-decoration: none;
+}
+
 .navbar-brand .navbar-brand-title,
 html[data-bs-theme=dark] .navbar-brand .navbar-brand-title {
     text-align: start;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 .navbar-brand .navbar-brand-subtitle,
